--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/babel__core": "^7.20.1",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-web": "^0.19.7",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
