--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/babel__core": "^7.20.1",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "^4.7.1",
