--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -19,6 +20,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^10.0.0",
