--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/datetimepicker": "^7.6.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -21,8 +22,11 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-redash": "^18.1.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "^0.19.7",
     "react-redux": "^8.1.1"
