--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-redash": "^18.1.1",
